--- a/camerademo/app/src/main/AndroidManifest.xml
+++ b/camerademo/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <!--音频录制权限 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -21,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".UI.CameraActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".UI.AudioRecordActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
