--- a/camerademo/app/src/main/AndroidManifest.xml
+++ b/camerademo/app/src/main/AndroidManifest.xml
@@ -23,10 +23,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UI.CameraActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".UI.AudioRecordActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".UI.CameraActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".UI.AudioRecordActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".UI.EncoderActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
