完成音视频录制功能

--- a/camerademo/app/src/main/AndroidManifest.xml
+++ b/camerademo/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity
             android:name=".UI.EncoderActivity"
             android:screenOrientation="portrait" />
+        <activity android:name=".UI.AVEncoderActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
